--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,14 @@
   .h-84px {
     height: 84px
   }
+  .z-5 {
+    z-index: 5;
+  }
+
+  .rounded-4px {
+    border-radius: 4px;
+  }
+
   .rounded-6px {
     border-radius: 6px;
   }
@@ -48,6 +56,38 @@
     background-color: rgba(23, 143, 172, var(--tw-bg-opacity));
     color: rgba(255, 255, 255, var(--tw-text-opacity));
   }
+
   .text-18px {
       font-size: 18px;
   }
+  .text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+  .text-green-3 {
+    --tw-text-opacity: 1;
+    color: rgba(48, 142, 172, var(--tw-text-opacity));
+  }
+  .text-white {
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+  }
+
+  .bg-green-3 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(48, 142, 172, var(--tw-bg-opacity));
+  }
+
+  .border-green-3 {
+    --tw-border-opacity: 1;
+    border-color: rgba(48, 142, 172, var(--tw-border-opacity));
+  }
+  
+  .border-solid {
+    border-style: solid;
+  }
+  
+  .border-1 {
+    border-width: 1px;
+  }
+
