--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,27 @@
+  .w-60px {
+    width: 60px;
+  }
   .w-150px {
     width: 150px;
   }
   .w-177px {
     width: 177px
   }
+  .w-320px {
+    width: 320px;
+  }
   .w-375px {
     width: 375px;
+  }
+
+  .h-8px {
+    height: 8px;
+  }
+  .h-28px {
+    height: 28px;
+  }
+  .h-48px {
+    height: 48px;
   }
   .h-58px {
     height: 58px
@@ -13,8 +29,42 @@
   .h-84px {
     height: 84px
   }
+
   .z-5 {
     z-index: 5;
+  }
+  .z-11 {
+      z-index: 11;
+  }
+
+  .px-8px {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .px-15px{
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .py-9px {
+    padding-top: 9px;
+    padding-bottom: 9px;
+  }
+
+  .py-12px {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  .py-30px {
+    padding-top: 30px;
+    padding-bottom: 30px;;
+  }
+  .mt-5px {
+    margin-top: 5px;
+  }
+  .mt-28px {
+    margin-top: 28px;
   }
 
   .rounded-4px {
@@ -64,9 +114,18 @@
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .text-red-1 {
+    --tw-text-opacity: 1;
+    color: rgba(227,74,74,var(--tw-text-opacity));
+  }
   .text-green-3 {
     --tw-text-opacity: 1;
     color: rgba(48, 142, 172, var(--tw-text-opacity));
+  }
+  .text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgba(140, 140, 140, var(--tw-text-opacity));
   }
   .text-white {
     --tw-text-opacity: 1;
@@ -90,4 +149,8 @@
   .border-1 {
     border-width: 1px;
   }
+
+  .border-b-1 {
+    border-bottom-width: 1px;
+}
 
